src/css/variablesCustom.css
/**
  * Variables naming rule: --{selector aka component aka namespace}-{css property}-{pseudo class or media query name} eg. --p-background-color-hover 
  * NOTE: Within the component don't use any name spacing eg. component header don't use --header-nav-right-color just use --color the namespace can be added by the Shadow as an html attribute
  * - if a component holds other components or nodes you can declare or remap classes eg. :host > h1 {--color: var(--h1-color, white);}
  * - if a component holds other components you should share the attribute namespace with its children
  */

/* font tracking */
@import url("https://cdn.fonts.net/t/1.css?apiType=css&projectid=ae6aa7d0-cd17-11ec-9404-069abf4c3446");

/* custom steps fonts */
@font-face{
  font-family:"PPMonumentExtended";
  src:url("/assets/fonts/PPMonumentExtended-Regular.woff") format("woff"),
      url("/assets/fonts/PPMonumentExtended-Regular.woff2") format("woff2"),
      url("/assets/fonts/PPMonumentExtended-Regular.ttf") format("ttf"),
      url("/assets/fonts/PPMonumentExtended-Regular.otf") format("otf");
  font-weight: normal;
  font-style: normal;
  font-display: swap;
}
@font-face{
  font-family:"NeueAugenblickMedium";
  src:url("/assets/fonts/6445146/6401e781-2d8c-4d62-ac8d-b245b15dd7c4.woff2") format("woff2"),
      url("/assets/fonts/6445146/1bf8c15c-8f26-4df0-977f-d08a96254ce1.woff") format("woff");
  font-weight: normal;
  font-style: normal;
  font-display: swap;
}
@font-face{
  font-family:"NeueAugenblickBold";
  src:url("/assets/fonts/6445185/a8febf1e-42e1-400d-b0fa-3f59eccbf33c.woff2") format("woff2"),
      url("/assets/fonts/6445185/cfd5c4f2-6341-461c-8956-077248226f8c.woff") format("woff");
  font-weight: normal;
  font-style: normal;
  font-display: swap;
}

:root {
  /* reset */
  --header-height: 0;

  /* colors */
  --steps-color-black: #000000;
  --steps-color-white: #ffffff;
  --steps-color-light-grey: #f6f6f6;
  --steps-color-grey-sold-out: #ACACAC;
  --steps-color-grey: #6c6c6c;
  --steps-color-grey-dark: #1c181c;
  --steps-color-red-dark: #bd0f15;
  --steps-color-red: #f04249;
  --steps-color-red-light: #f7a1a4;
  --steps-color-blue-dark: #260990;
  --steps-color-blue: #3d0fe5;
  --steps-color-blue-light: #8c6ff6;
  --steps-color-blue-lighter: #c6b7fa;

  --background-color: transparent;
  --background-gradient: linear-gradient(180deg, var(--steps-color-blue) 0%, var(--steps-color-white) 200px);
  --color: var(--steps-color-black);
  --a-color: var(--steps-color-black);
  --color-hover: var(--steps-color-grey);
  --color-disabled: var(--steps-color-grey);
  --color-secondary: var(--steps-color-black);
  --color-tertiary: var(--steps-color-blue);
  --button-quaternary-color-custom: var(--steps-color-black);

  --header-nav-right-a-menu-icon-background-color-custom: var(--steps-color-white);
  --footer-default-invert-svg-color-custom: var(--steps-color-black);
  --navigation-default-color-custom: var(--steps-color-white);
  --footer-default-invert-color-custom: var(--steps-color-white);
  --footer-default-invert-svg-color-custom: var(--steps-color-white);
  --button-primary-color-custom: var(--steps-color-white);

  --h1-color: var(--steps-color-black);
  --h2-color: var(--steps-color-blue);
  --h3-color: var(--steps-color-white);

  --color-hover: var(--steps-color-black);

  /* font family */
  --font-family-bold: NeueAugenblickBold, NeueAugenblickMedium, Helvetica, Arial, sans-serif;
  --font-family-secondary: var(--font-family-bold);
  --font-family: NeueAugenblickMedium, Helvetica, Arial, sans-serif;
  --p-font-family: var(--font-family);
  --h-font-family: PPMonumentExtended, Helvetica, Arial, sans-serif;
  --navigation-default-font-family-custom: var( --h-font-family);
  --wrapper-teaser-h1-font-family: var(--h-font-family);
  --wrapper-teaser-h2-font-family: var(--h-font-family);
  --wrapper-teaser-h3-font-family: var(--h-font-family);

  /* font sizes  */
  --steps-h-font-size: clamp(32px, 5vw, 50px);
  --steps-h-font-size-small: clamp(16px, 2.5vw, 25px);
  --h1-font-size: var(--steps-h-font-size);
  --h2-font-size: var(--steps-h-font-size);
  --h3-font-size: var(--steps-h-font-size);
  --wrapper-teaser-h1-font-size: var(--steps-h-font-size);
  --wrapper-teaser-h2-font-size: var(--steps-h-font-size-small);
  --wrapper-teaser-h3-font-size: var(--steps-h-font-size-small);

  /* font weights */
  --a-font-weight: bold;

  /* margins and paddings */
  --header-nav-right-margin-custom: 0 0 2rem 0;
  --header-nav-right-margin-mobile-custom: 0 0 2rem 0;
  --h-margin-bottom: 0.25em;
  --button-secondary-padding: 0.25rem 0.75rem;
  --a-margin: 0;

  /* general spacing concept */
  --component-spacing: 3rem;

  /* border radius */
  --border-radius: 2.5rem;
  --button-secondary-border-radius: var(--border-radius);
  --button-secondary-border-radius-mobile: var(--border-radius);
  --date-select-secondary-border-radius: var(--border-radius);
  --filter-accordion-secondary-border-radius: var(--border-radius);

  /* date select */
  --date-select-secondary-padding: 4px 12px;

  /* content */
  --ul-list-style: none;
  --any-content-width: 100vw;
  --any-content-width-mobile: 100vw;
  --any-content-spacing-mobile: 0;

  /* stage picture fullwidth */
  --picture-full-img-max-height: 100vh;
  --picture-full-img-min-height: 100vh;
  --picture-full-img-object-fit: cover;
  --picture-full-img-width: 100%;
  --picture-full-img-margin: 0;

  /* stage button */
  --button-steps-border-radius: 5.0rem;
  --button-steps-border-width: 0.1rem;
  --button-steps-border-color: var(--steps-color-white);
  --button-steps-padding: 6px 24px;
  --button-steps-font-size: 1.2rem;
  --button-steps-font-size-mobile: 1.6rem;
  --button-steps-color: var(--steps-color-white);
  --button-steps-background-color-hover: transparent;
  --button-steps-spielplan-color: var(--steps-color-black);
  --button-steps-spielplan-border-color: var(--steps-color-black);
  --button-steps-spielplan-border-width: 1px;
  --button-steps-spielplan-border-radius: 2.5rem;
  --button-steps-spielplan-padding: 6px 24px;
  --button-steps-spielplan-background-color-hover: transparent;
  --button-steps-spielplan-reset-color-active: var(--steps-color-white);
  --button-steps-spielplan-reset-color-hover: var(--steps-color-white);
  --button-steps-spielplan-reset-border-color: var(--button-steps-spielplan-border-color);
  --button-steps-spielplan-reset-border-width: var(--button-steps-spielplan-border-width);
  --button-steps-spielplan-reset-border-radius: var(--button-steps-spielplan-border-radius);
  --button-steps-spielplan-reset-padding: var(--button-steps-spielplan-padding);
  --button-steps-spielplan-reset-background-color-active: var(--steps-color-black);
  --button-steps-spielplan-reset-background-color-hover: var(--steps-color-black);
  --button-steps-spielplan-reset-display: none;
  --button-steps-filter-padding: 6px 24px;
  --button-steps-filter-background-color-active: var(--steps-color-black);
  --button-steps-filter-color-active: var(--steps-color-white);
  --button-steps-filter-border-radius: var(--button-steps-spielplan-border-radius);
  --button-steps-filter-background-color-hover: var(--steps-color-black);;
  --button-steps-filter-color-hover: var(--steps-color-white);
  --button-steps-filter-background-color-hover-mobile: var(--steps-color-black);

  /* header */
  --header-nav-right-a-logo-top-mobile-custom: 2em;
  --header-default-background-color: transparent;
  --header-nav-right-background-color-custom: transparent;
  --header-nav-right-margin-mobile-custom: 0;
  --header-nav-right-a-menu-icon-margin: 0 10px 0 0;
  --header-nav-right-logo-width-custom: 150px;
  --logo-default-img-margin-mobile: -10px 0 0 -10px;

  /* navigation */
  --a-link-font-size-custom: 2rem;
  --navigation-default-color-custom: var(--steps-color-black);
  --navigation-default-a-link-text-align-mobile-custom: center;
  --navigation-default-arrow-display: none;
  --navigation-default-a-link-content-spacing-no-scroll-custom: 0.5rem;
  --navigation-default-a-link-font-size-no-scroll-mobile-custom: 2rem;
  --navigation-default-a-link-content-spacing-custom-no-scroll: 0.5rem;

  /* content dark */
  --content-dark-h2-color: var(--steps-color-red);
  --content-dark-align-items: normal;

  /* button category */
  --button-category-background-color-hover-custom: transparent;
  --button-category-color-hover-custom: var(--color);
  --button-category-font-weight-hover-custom: 600;
  --button-category-background-color-active-custom: var(--button-category-background-color-hover-custom);
  --button-category-color-active-custom: var(--button-category-color-hover-custom);

  /* footer */
  --footer-default-boarder-right: none;
  --footer-default-padding: 20px 0 0 92px;
  --footer-default-padding-first-child: 0;
  --footer-default-a-font-size: 17px;
  --footer-default-line-height: 21px;
  --footer-default-a-margin: 0 0 10px;
  --footer-default-any-a-display: inline-block;
  --footer-default-any-2-width: 20%;
  --footer-default-any-3-width: 20%;
  --footer-default-any-4-width: 20%;
  --footer-default-p-font-size: 22px;
  --footer-default-invert-a-color-hover-custom: var(--steps-color-red);
  --footer-default-invert-color: var(--steps-color-red);
  --footer-default-invert-svg-color-hover: var(--steps-color-red);
  --footer-default-padding-last-child-mobile: 20px 0 0;
  --footer-default-p-font-size-mobile: 17px;
  --footer-default-a-font-size-mobile: 17px;
  --footer-default-line-height-mobile: 21px;
  --footer-default-invert-background-color-custom: var(--steps-color-blue);
  --footer-default-a-font-weight: normal;
  --footer-default-h4-font-size: 14px;
  --footer-default-h4-padding: 0 0 5px 0;

  --content-dark-a-color: var(--steps-color-white);
  --content-dark-a-color-hover: var(--steps-color-red);

  --header-nav-right-a-menu-icon-border-radius-custom: 0;
  --content-dark-gap: 2rem;
  --content-dark-gap-mobile: 1rem;
  --gap-custom: 2rem;
  --wrapper-reverse-gap: 2rem;

  --content-dark-h2-font-size: 40px;
  --content-dark-h2-line-height: 45px;
  --content-dark-h2-font-size-mobile: 30px;
  --content-dark-h2-line-height-mobile: 35px;
  --content-dark-margin-first-child-mobile: 0;

  --content-dark-p-font-size: 17px;
  --content-dark-p-line-height: 21px;
  --content-dark-p-font-size-mobile: 17px;
  --content-dark-p-line-height-mobile: 21px;
  --p-font-size: 16px;
  --p-line-height: 20px;
  --p-font-size-mobile: 16px;
  --p-line-height-mobile: 20px;

  --wrapper-reverse-flex-direction-mobile: column-reverse;
  --navigation-default-a-link-font-size-mobile-custom: 1.1429rem;

  --flatpickr-default-background-custom: darkgray;
  --flatpickr-default-color-start-end-range-custom: white;

  --wrapper-teaser-a-font-weight: normal;
  --wrapper-teaser-h2-font-size-mobile: 1.125rem;
}

body {
  background: var(--background-gradient);
  overflow-y: scroll;
}

body.no-gradient {
    background: none;
}

.l-outer {
  padding-bottom: 2rem;
}

